Editar los datos de cada jugador - PlayersActivity y PlayersActivity3

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,9 @@
             android:name=".GraphActivity"
             android:exported="false" />
         <activity
+            android:name=".PlayersActivity3"
+            android:exported="false" />
+        <activity
             android:name=".PlayersActivity2"
             android:exported="false" />
         <activity
